--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,4 @@
-body{
-    margin: 0;
-    padding: 0;
-}
+
 
 .home {
     overflow-x: hidden;
@@ -12,15 +9,26 @@ body{
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+
 }
 
 .footer {
-    background-color: white;
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100px;
     margin: 0;
+    background-color: white;
 }
+
+.centrar{
+    justify-content: center;
+    text-align: center;
+    padding-top: 40px;
+}
+
+.titulo{
+    padding: 2rem 3rem;
+    text-align: center;
+    color: #fff;
+    border: 3px solid #fff;
+    box-shadow: 0px 0px 10px #222;
+    backdrop-filter: blur(10px);
+}
+
