--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,19 @@
+h1{
+    color: #ffffff;
+	font-family: "ABeeZee";
+	font-weight: bold;
+	font-size: 36px;
+	text-align: center;
+	padding-top: 50px;
+}
 
+p{
+    color: #ffffff;
+	font-family: "ABeeZee";
+	font-weight: bold;
+	text-align: center;
+	padding-top: 50px;
+}
 
 .home {
     overflow-x: hidden;
@@ -29,6 +44,23 @@
     color: #fff;
     border: 3px solid #fff;
     box-shadow: 0px 0px 10px #222;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px); 
+    padding-bottom: 30px;
 }
 
+.contenedor{
+    backdrop-filter: blur(10px); 
+    justify-content: center;
+}
+
+.carrusel{
+    padding-bottom: 80px;
+}
+
+.separa{
+    padding-bottom: 50px;
+}
+
+.video{
+    padding-bottom: 80px;
+}
