--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+*{
+    margin: 0;
+    padding-left: 0;
+}
+
+
+
+
 h1{
     color: #ffffff;
 	font-family: "ABeeZee";
@@ -66,4 +74,14 @@ p{
 .separa{
     padding-bottom: 50px;
     padding-top: 50px;
+}
+
+@media (max-width: 600px){
+    .video{
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-wrap:wrap;
+    }
+
 }
