--- a/css/style.css
+++ b/css/style.css
@@ -3,16 +3,35 @@
     padding-left: 0;
 }
 
+.servicios {
+    overflow-x: hidden;
+    background-image: url(../images/FONDOSERVICIOS.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
 
+}
 
 
 h1{
-    color: #ffffff;
+    color:#222;
 	font-family: "ABeeZee";
 	font-weight: bold;
 	font-size: 36px;
 	text-align: center;
 	padding-top: 50px;
+}
+
+h3{
+    color:#222;
+	font-family: "ABeeZee";
+	font-weight: bold;
+	font-size: 36px;
+	text-align: center;
+	padding-top: 50px; 
 }
 
 p{
@@ -38,6 +57,7 @@ p{
 .footer {
     margin: 0;
     background-color: white;
+    padding-top: 30px;
 }
 
 .centrar{
@@ -49,11 +69,12 @@ p{
 .titulo{
     padding: 2rem 3rem;
     text-align: center;
-    color: #fff;
+    color: black;
     border: 3px solid #fff;
     box-shadow: 0px 0px 10px #222;
     backdrop-filter: blur(10px); 
     padding-bottom: 30px;
+    padding-top: 40px;
 }
 
 .contenedor{
@@ -74,6 +95,14 @@ p{
 .separa{
     padding-bottom: 50px;
     padding-top: 50px;
+}
+
+.contorno{
+    background-color: white;
+    border-radius: 20px;
+    padding: 5px;
+    margin: 10px;
+    box-shadow: 0px 0px 10px #222;
 }
 
 @media (max-width: 600px){
