--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,30 @@
     padding-left: 0;
 }
 
+label{
+    color:#222;
+	font-family: "ABeeZee";
+	font-weight: bold;
+	font-size: 36px;
+	text-align: center;
+	padding-top: 50px; 
+}
+
+li{
+    list-style: none;
+}
+
+.productos{
+    overflow-x: hidden;
+    background-image: url(../images/FONDO\ PRODUCTOS.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+
+}
 .servicios {
     overflow-x: hidden;
     background-image: url(../images/FONDOSERVICIOS.jpg);
@@ -100,17 +124,24 @@ p{
 .contorno{
     background-color: white;
     border-radius: 20px;
-    padding: 5px;
-    margin: 10px;
+    padding: 10px;
+    margin: 15px;
     box-shadow: 0px 0px 10px #222;
+    padding-top: 10px;
+    justify-content: center;
 }
 
-@media (max-width: 600px){
+@media (max-width: 700px){
     .video{
-        width: 100%;
+        width: auto;
         height: auto;
         display: flex;
         flex-wrap:wrap;
     }
+    .contorno{
+        height: auto;
+        width: auto;
+    }
 
 }
+
