--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,19 @@ p{
     justify-content: center;
 }
 
+.contacto{
+    overflow-x: hidden;
+    background-image: url(../images/FONDO\ CONTACTO.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+
+}
+
+
 .home {
     overflow-x: hidden;
     background-image: url(../images/FONDO\ HOME.jpg);
@@ -114,6 +127,7 @@ p{
 }
 
 .titulo{
+    border-radius: 30px;
     padding: 2rem 3rem;
     text-align: center;
     color: black;
@@ -146,24 +160,25 @@ p{
 
 .contorno{
     background-color: white;
-    border-radius: 20px;
+    border-radius: 30px;
     padding: 10px;
     margin: 15px;
     box-shadow: 0px 0px 10px #222;
     padding-top: 10px;
+    padding-bottom: 15px;
     justify-content: center;
 }
 
 @media (max-width: 700px){
     .video{
-        width: auto;
-        height: auto;
+        width: fit-content;
+        height: fit-content;
         display: flex;
         flex-wrap:wrap;
     }
     .contorno{
-        height: auto;
-        width: auto;
+        height: fit-content;
+        width: fit-content;
     }
 
 }
