--- a/css/style.css
+++ b/css/style.css
@@ -165,10 +165,18 @@ p{
     margin: 15px;
     box-shadow: 0px 0px 10px #222;
     padding-top: 10px;
-    padding-bottom: 15px;
     justify-content: center;
 }
 
+.contorno_s{
+    background-color: white;
+    border-radius: 30px;
+    padding: 10px;
+    margin: 15px;
+    box-shadow: 0px 0px 10px #222;
+    padding-top: 10px;
+    justify-content: center;
+}
 @media (max-width: 700px){
     .video{
         width: fit-content;
