--- a/css/style.css
+++ b/css/style.css
@@ -1,214 +1,196 @@
-*{
-    margin: 0;
-    padding-left: 0;
-    overflow-x: hidden;
+.contenedor {
+  backdrop-filter: blur(10px);
+  justify-content: center;
+  padding: 0;
 }
 
-label{
-    color:#222;
-	font-family: "ABeeZee";
-	font-weight: bold;
-	font-size: 36px;
-	text-align: center;
-	padding-top: 50px; 
+li {
+  list-style: none;
+}
+li a {
+  text-decoration: none;
 }
 
-li{
-    list-style: none;
+* {
+  margin: 0;
+  padding-left: 0;
+  overflow-x: hidden;
 }
 
-
-.nosotros{
-    overflow-x: hidden;
-    background-image: url(../images/FONDO\ NOSOTROS.jpg);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    overflow-x: hidden;
-    display: flex;
-    flex-direction: column;
-
+label {
+  color: #222;
+  font-family: "ABeeZee";
+  font-weight: bold;
+  font-size: 36px;
+  text-align: center;
+  padding-top: 50px;
 }
 
-.productos{
-    overflow-x: hidden;
-    background-image: url(../images/FONDO\ PRODUCTOS.jpg);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    overflow-x: hidden;
-    display: flex;
-    flex-direction: column;
-
-}
-.servicios {
-    overflow-x: hidden;
-    background-image: url(../images/FONDOSERVICIOS.jpg);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    overflow-x: hidden;
-    display: flex;
-    flex-direction: column;
-
+h1 {
+  color: #222;
+  font-family: "ABeeZee";
+  font-weight: bold;
+  font-size: 36px;
+  text-align: center;
+  padding-top: 50px;
 }
 
-
-h1{
-    color:#222;
-	font-family: "ABeeZee";
-	font-weight: bold;
-	font-size: 36px;
-	text-align: center;
-	padding-top: 50px;
+h2 {
+  color: #222;
+  font-family: "ABeeZee";
+  font-weight: bold;
+  font-size: 36px;
+  text-align: center;
 }
 
-h3{
-    color:#222;
-	font-family: "ABeeZee";
-	font-weight: bold;
-	font-size: 36px;
-	text-align: center;
-	padding-top: 50px; 
+h3 {
+  color: #222;
+  font-family: "ABeeZee";
+  font-weight: bold;
+  font-size: 36px;
+  text-align: center;
+  justify-content: center;
 }
 
-p{
-    color: #ffffff;
-	font-family: "ABeeZee";
-	font-weight: bold;
-	text-align: center;
-    justify-content: center;
+p {
+  color: #fff;
+  font-family: "ABeeZee";
+  font-weight: bold;
+  text-align: center;
+  justify-content: center;
 }
 
-
-
-.blanco{
-    color: #ffffff;
-	font-family: "ABeeZee";
-	font-weight: bold;
-	text-align: center;
-    justify-content: center;
+.centrar {
+  justify-content: center;
+  text-align: center;
+  padding-top: 40px;
 }
 
-.contacto{
-    overflow-x: hidden;
-    background-image: url(../images/FONDO\ CONTACTO.jpg);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    overflow-x: hidden;
-    display: flex;
-    flex-direction: column;
-
+.titulo {
+  border-radius: 30px;
+  padding: 2rem 3rem;
+  text-align: center;
+  color: #222;
+  border: 3px solid #fff;
+  box-shadow: 0px 0px 20px #222;
+  backdrop-filter: blur(10px);
+  padding-bottom: 30px;
+  padding-top: 40px;
 }
 
+.carrusel {
+  padding-bottom: 80px;
+}
 
-.home {
-    overflow-x: hidden;
-    background-image: url(../images/FONDO\ HOME.jpg);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    overflow-x: hidden;
-    display: flex;
-    flex-direction: column;
+.img {
+  padding-bottom: 20px;
+}
 
+.separa {
+  padding-bottom: 50px;
+  padding-top: 50px;
+}
+
+.contorno {
+  background-color: #fff;
+  border-radius: 30px;
+  padding: 10px;
+  margin: 15px;
+  box-shadow: 0px 0px 10px #222;
+  padding-top: 10px;
+  justify-content: center;
+}
+
+.contorno_s {
+  background-color: #fff;
+  border-radius: 30px;
+  padding: 10px;
+  margin: 15px;
+  box-shadow: 0px 0px 10px #222;
+  padding-top: 10px;
+  justify-content: center;
 }
 
 .footer {
-    margin: 0;
-    background-color: white;
-    padding-top: 30px;
+  margin: 0;
+  background-color: #fff;
 }
 
-.centrar{
-    justify-content: center;
-    text-align: center;
-    padding-top: 40px;
+@media (max-width: 1920px) {
+  .video {
+    width: 900px;
+    height: 600px;
+  }
+}
+@media (max-width: 1024px) {
+  .video {
+    width: 700px;
+    height: 400px;
+  }
+}
+@media (max-width: 700px) {
+  .video {
+    width: fit-content;
+    height: fit-content;
+  }
+  .contorno {
+    height: fit-content;
+    width: fit-content;
+  }
+}
+.nosotros {
+  overflow-x: hidden;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  background-image: url(../images/FONDO\ NOSOTROS.jpg);
 }
 
-.titulo{
-    border-radius: 30px;
-    padding: 2rem 3rem;
-    text-align: center;
-    color: black;
-    border: 3px solid #fff;
-    box-shadow: 0px 0px 10px #222;
-    backdrop-filter: blur(10px); 
-    padding-bottom: 30px;
-    padding-top: 40px;
+.productos {
+  background-image: url(../images/FONDO\ PRODUCTOS.jpg);
+  overflow-x: hidden;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
-.contenedor{
-    backdrop-filter: blur(10px); 
-    justify-content: center;
-    padding: 0;
+.servicios {
+  background-image: url(../images/FONDOSERVICIOS.jpg);
+  overflow-x: hidden;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
-.carrusel{
-    padding-bottom: 80px;
+.contacto {
+  overflow-x: hidden;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  background-image: url(../images/FONDO\ CONTACTO.jpg);
 }
 
-
-.img{
-    padding-bottom: 20px;
+.home {
+  overflow-x: hidden;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  background-image: url(../images/FONDO\ HOME.jpg);
 }
 
-.separa{
-    padding-bottom: 50px;
-    padding-top: 50px;
-}
-
-.contorno{
-    background-color: white;
-    border-radius: 30px;
-    padding: 10px;
-    margin: 15px;
-    box-shadow: 0px 0px 10px #222;
-    padding-top: 10px;
-    justify-content: center;
-}
-
-.contorno_s{
-    background-color: white;
-    border-radius: 30px;
-    padding: 10px;
-    margin: 15px;
-    box-shadow: 0px 0px 10px #222;
-    padding-top: 10px;
-    justify-content: center;
-}
-
-
-@media(max-width: 1920px){
-    .video{
-        width: 900px;
-        height: 600px;
-    }
-
-
-
-}
-
-@media(max-width: 1024px){
-    .video{
-        width: 700px;
-        height: 400px;
-    }
-
-
-
-}
-
-@media (max-width: 700px){
-    .video{
-        width: fit-content;
-        height: fit-content;
-    }
-    .contorno{
-        height: fit-content;
-        width: fit-content;
-    }
-
-}
-
+/*# sourceMappingURL=style.css.map */
