--- a/scss/_medias.scss
+++ b/scss/_medias.scss
@@ -31,3 +31,35 @@
     }
 
 }
+
+
+  @media screen and (max-width: 768px) {
+    .navbar {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .logo {
+      margin-bottom: 20px;
+    }
+  
+    .menu {
+      flex-direction: column;
+    }
+  
+    .menu li {
+      margin-bottom: 10px;
+    }
+  }
+
+    @media screen and (max-width: 768px) {
+        .footer-content {
+          flex-direction: column;
+          align-items: center;
+        }
+      
+        .footer-item {
+          margin-bottom: 10px;
+        }
+      }
+      
